fix tests failing with InaccessibleObjectException